syntax = "proto3";

package AccountCommand;

service UserService {
    rpc Create(CreateUserRequest) returns (CreateUserResponse) {}
}

message CreateUserRequest {
    string email = 1;
    string name = 2;
}

message CreateUserResponse {
    string id = 1;
}